fix header border apear smooth in dark mode

--- a/src/sass/components/footer/_footer.scss
+++ b/src/sass/components/footer/_footer.scss
@@ -69,7 +69,7 @@
 .footer__button {
   padding: 0;
 
-  color: inherit;
+  color: $main-light-text-color;
   background-color: transparent;
 
   border-width: 0;
@@ -82,6 +82,10 @@
     transition: color $transition-timing $transition-function,
       opacity $transition-timing $transition-function,
       visibility $transition-timing $transition-function;
+  }
+
+  body.dark-mode & {
+    color: $main-dark-text-color;
   }
 
   &:hover,
